--- a/DongTa.ApiServer/appsettings.json
+++ b/DongTa.ApiServer/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ErpBhxh": "Data Source=10.64.208.250;Initial Catalog=ERP_BHXHGL;User ID=erp_bhxhgl;Password=123456;TrustServerCertificate=true",
-    "Tst": "Data Source=10.64.208.250;Initial Catalog=NguoiThamGiaXacThucBcaDb;TrustServerCertificate= true;User ID= familydb;Password= 123456",
-    "Hgd": "Data Source=10.64.208.250;Initial Catalog=FamilyDB;User ID=Familydb;Password=123456;TrustServerCertificate=true",
-    "Other": "Data Source=10.64.208.250;Initial Catalog=Chinook;User ID=adminalldb;Password=2Peng@qu@y;TrustServerCertificate=true"
+    "ErpBhxh": "",
+    "Tst": "",
+    "Hgd": "",
+    "Other": ""
   }
 }
